# wager

./: Cargo.toml  README.md
.github/workflows/: dynamic.yml  static.yml
src/: fraction_simplification.rs  lib.rs  math.rs  odd.rs  rational_approximation.rs
src/math/: rational_approximation.rs
src/odd/: decimal.rs  fractional.rs  moneyline.rs
