[package]
name = "wager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Primitive types and functionality for betting odds"
repository = "https://github.com/nficca/wager"
readme = "README.md"
exclude = [".github/*", ".gitignore"]

[features]
serde = ["dep:serde"]

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
serde = { version = "1.0.218", features = ["derive"], optional = true }

[dev-dependencies]
test-case = "3.3.1"
